--- a/CatalogoGames.API/appsettings.json
+++ b/CatalogoGames.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=catalogo.db",
+    "ServiceBus": "Endpoint=sb://<namespace>.servicebus.windows.net/;SharedAccessKeyName=<keyname>;SharedAccessKey=<key>"
+  },
+  "ServiceBus": {
+    "QueueName": "games-events"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
