--- a/CatalogoGames.Application/CatalogoGames.Application.csproj
+++ b/CatalogoGames.Application/CatalogoGames.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CatalogoGames.Domain\CatalogoGames.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
