--- a/CatalogoGames.API/appsettings.json
+++ b/CatalogoGames.API/appsettings.json
@@ -1,10 +1,6 @@
 {
   "ConnectionStrings": {
-    "Sqlite": "Data Source=catalogo.db",
-    "ServiceBus": "Endpoint=sb://<namespace>.servicebus.windows.net/;SharedAccessKeyName=<keyname>;SharedAccessKey=<key>"
-  },
-  "ServiceBus": {
-    "QueueName": "games-events"
+    "Catalogo": "Data Source=catalogo.db"
   },
   "Logging": {
     "LogLevel": {
